--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="startBtn">START</div>
   <canvas id="gameCanvas"></canvas>
   <script src="game.js"></script>
 </body>
