--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <body>
   <div id="startBtn">START</div>
   <canvas id="gameCanvas"></canvas>
+  <div id="scoreUpload" style="display:none;">
+  <input type="text" id="usernameInput" placeholder="請輸入名稱">
+  <button id="uploadBtn">上傳分數</button>
+  <button id="backHomeBtn">回首頁</button>
+</div>
+  <div id="rankingBoard" style="display:none;">
+  <h3>排行榜</h3>
+  <ul id="rankingList"></ul>
+  </div>
   <script src="game.js"></script>
 </body>
 </html>
